@@ -5,6 +5,8 @@
   - Removed core dependency on Guava.
   - [breaking] Switch from 1- to 0-based indices in OracleReturning.returnParameters()
   - [breaking] Moved JoinRowMapper.JoinRow class to top-level class
+  - [breaking] Modified @Register* annotations to be repeatable, instead of using
+    array attributes.
 
 3.0.0-beta1
   - [breaking] Refactored SqlStatementCustomizerFactory.createForParameter(...)
